Xbim.Geometry.Engine.Native/include/xbim_geometry_api.h

typedef struct XbimContext_*        XbimContextHandle;
typedef struct XbimShape_*          XbimShapeHandle;
typedef struct XbimLocation_*       XbimLocationHandle;
typedef int XbimResult;
XBIM_EXPORT const char* XBIM_CALL xbim_get_last_error(void);
typedef void (XBIM_CALL *XbimLogCallback)(int level, const char* msg);
XBIM_EXPORT XbimResult XBIM_CALL xbim_context_create(
    double              precision,
    double              oneMeter,
    double              oneFoot,
    double              oneMillimeter,
    double              radianFactor,
    double              timeout,
    double              minimumGap,
    XbimLogCallback     logCallback,
    XbimContextHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_context_set_logger(
    XbimContextHandle  handle,
    XbimLogCallback    logCallback);
XBIM_EXPORT XbimResult XBIM_CALL xbim_context_log(
    XbimContextHandle  handle,
    int                level,
    const char*        message);
typedef enum XbimShapeType
{
    XBIM_SHAPE_VERTEX   = 0,
    XBIM_SHAPE_EDGE     = 1,
    XBIM_SHAPE_WIRE     = 2,
    XBIM_SHAPE_FACE     = 3,
    XBIM_SHAPE_SHELL    = 4,
    XBIM_SHAPE_SOLID    = 5,
    XBIM_SHAPE_COMPOUND = 6
} XbimShapeType;
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_type(
    XbimShapeHandle handle,
    XbimShapeType*  outType);
XBIM_EXPORT int XBIM_CALL xbim_shape_is_null(XbimShapeHandle handle);
XBIM_EXPORT int XBIM_CALL xbim_shape_is_valid(XbimShapeHandle handle);
XBIM_EXPORT int XBIM_CALL xbim_shape_is_closed(XbimShapeHandle handle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_reversed(
    XbimShapeHandle  handle,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_is_same(
    XbimShapeHandle a,
    XbimShapeHandle b,
    int*            outSame);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_hash_code(
    XbimShapeHandle handle,
    int*            outHash);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_bounding_box(
    XbimShapeHandle handle,
    double* minX, double* minY, double* minZ,
    double* maxX, double* maxY, double* maxZ);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_volume(
    XbimShapeHandle handle,
    double*         outVolume);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_surface_area(
    XbimShapeHandle handle,
    double*         outArea);
XBIM_EXPORT XbimResult XBIM_CALL xbim_location_create_from_axis2(
    double originX, double originY, double originZ,
    double zDirX, double zDirY, double zDirZ,
    double xDirX, double xDirY, double xDirZ,
    XbimLocationHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_location_create_identity(
    XbimLocationHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_location_compose(
    XbimLocationHandle  loc1,
    XbimLocationHandle  loc2,
    XbimLocationHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_location_get_transform(
    XbimLocationHandle handle,
    double* outM11, double* outM12, double* outM13,
    double* outM21, double* outM22, double* outM23,
    double* outM31, double* outM32, double* outM33,
    double* outOffsetX, double* outOffsetY, double* outOffsetZ,
    double* outScale);
XBIM_EXPORT XbimResult XBIM_CALL xbim_location_invert(
    XbimLocationHandle  handle,
    XbimLocationHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_location_translated(
    XbimLocationHandle  handle,
    double tx, double ty, double tz,
    XbimLocationHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_location_scaled(
    XbimLocationHandle  handle,
    double scaleFactor,
    XbimLocationHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_get_location(
    XbimShapeHandle     shapeHandle,
    XbimLocationHandle* outHandle,
    double* outM11, double* outM12, double* outM13,
    double* outM21, double* outM22, double* outM23,
    double* outM31, double* outM32, double* outM33,
    double* outOffsetX, double* outOffsetY, double* outOffsetZ,
    double* outScale);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_moved(
    XbimShapeHandle     shapeHandle,
    XbimLocationHandle  locationHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_gtransform(
    XbimShapeHandle shapeHandle,
    double m11, double m12, double m13, double offsetX,
    double m21, double m22, double m23, double offsetY,
    double m31, double m32, double m33, double offsetZ,
    double scaleX, double scaleY, double scaleZ,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_block(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double xLen,    double yLen,    double zLen,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_sphere(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_right_circular_cylinder(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,  double height,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_right_circular_cone(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,  double height,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_rectangular_pyramid(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double xLen,    double yLen,    double height,
    XbimShapeHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_extruded(
    XbimContextHandle   ctx,
    XbimShapeHandle     faceHandle,
    double dirX, double dirY, double dirZ,
    double depth,
    XbimLocationHandle  locationHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_extruded_tapered(
    XbimContextHandle   ctx,
    XbimShapeHandle     startFaceHandle,
    XbimShapeHandle     endFaceHandle,
    double dirX, double dirY, double dirZ,
    double depth,
    double precision,
    XbimLocationHandle  locationHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_revolved(
    XbimContextHandle   ctx,
    XbimShapeHandle     faceHandle,
    double axisOriginX, double axisOriginY, double axisOriginZ,
    double axisDirX,    double axisDirY,    double axisDirZ,
    double angle,
    XbimLocationHandle  locationHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_revolved_tapered(
    XbimContextHandle   ctx,
    XbimShapeHandle     faceHandle,
    XbimShapeHandle     endFaceHandle,
    double axisOriginX, double axisOriginY, double axisOriginZ,
    double axisDirX,    double axisDirY,    double axisDirZ,
    double angle,
    double precision,
    XbimLocationHandle  locationHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_solid_build_swept_disk(
    XbimContextHandle   ctx,
    XbimShapeHandle     directrixHandle,
    double              radius,
    double              innerRadius,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_write_brep(
    XbimShapeHandle handle,
    const char*     filePath);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_write_stl(
    XbimShapeHandle handle,
    const char*     filePath,
    double          deflection);