Xbim.Geometry.Engine.Interop/Internal/XbimGeometryNativeApi.cs

using System;
using System.Runtime.InteropServices;
using Xbim.Geometry.Engine.Interop.Handles;

namespace Xbim.Geometry.Engine.Interop.Internal
{
    /// <summary>
    /// P/Invoke declarations for all xbim_geometry_native exported functions.
    /// Destroy functions live in <see cref="NativeHandleMethods"/> to avoid
    /// circular dependencies with SafeHandle subclasses.
    /// </summary>
    internal static partial class XbimGeometryNativeApi
    {
        private const string Lib = NativeLibraryLoader.LibraryName;
        private const CallingConvention CC = CallingConvention.StdCall;

        static XbimGeometryNativeApi()
        {
            NativeLibraryLoader.EnsureLoaded();
        }

        #region Error Handling

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern IntPtr xbim_get_last_error();

        /// <summary>
        /// Returns the last error message as a managed string.
        /// The native pointer is only valid until the next xbim_* call on the same thread.
        /// </summary>
        internal static string GetLastError()
        {
            IntPtr ptr = xbim_get_last_error();
            return Marshal.PtrToStringAnsi(ptr) ?? string.Empty;
        }

        #endregion

        #region Context Lifecycle

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_context_create(
            double precision,
            double oneMeter,
            double oneFoot,
            double oneMillimeter,
            double radianFactor,
            double timeout,
            double minimumGap,
            XbimLogCallback? logCallback,
            out NativeContextHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_context_set_logger(
            NativeContextHandle handle,
            XbimLogCallback? logCallback);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_context_log(
            NativeContextHandle handle,
            int level,
            [MarshalAs(UnmanagedType.LPStr)] string message);

        #endregion

        #region Shape Queries

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_type(
            NativeShapeHandle handle,
            out int outType);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_is_null(NativeShapeHandle handle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_is_valid(NativeShapeHandle handle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_is_closed(NativeShapeHandle handle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_reversed(
            NativeShapeHandle handle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_is_same(
            NativeShapeHandle a,
            NativeShapeHandle b,
            out int outSame);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_hash_code(
            NativeShapeHandle handle,
            out int outHash);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_bounding_box(
            NativeShapeHandle handle,
            out double minX, out double minY, out double minZ,
            out double maxX, out double maxY, out double maxZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_volume(
            NativeShapeHandle handle,
            out double outVolume);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_surface_area(
            NativeShapeHandle handle,
            out double outArea);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_write_brep(
            NativeShapeHandle handle,
            [MarshalAs(UnmanagedType.LPStr)] string filePath);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_write_stl(
            NativeShapeHandle handle,
            [MarshalAs(UnmanagedType.LPStr)] string filePath,
            double deflection);

        #endregion

        #region Location

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_location_create_from_axis2(
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            out NativeLocationHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_location_create_identity(
            out NativeLocationHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_location_compose(
            NativeLocationHandle loc1,
            NativeLocationHandle loc2,
            out NativeLocationHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_location_get_transform(
            NativeLocationHandle handle,
            out double outM11, out double outM12, out double outM13,
            out double outM21, out double outM22, out double outM23,
            out double outM31, out double outM32, out double outM33,
            out double outOffsetX, out double outOffsetY, out double outOffsetZ,
            out double outScale);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_location_invert(
            NativeLocationHandle handle,
            out NativeLocationHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_location_translated(
            NativeLocationHandle handle,
            double tx, double ty, double tz,
            out NativeLocationHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_location_scaled(
            NativeLocationHandle handle,
            double scaleFactor,
            out NativeLocationHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_get_location(
            NativeShapeHandle shapeHandle,
            out NativeLocationHandle outHandle,
            out double outM11, out double outM12, out double outM13,
            out double outM21, out double outM22, out double outM23,
            out double outM31, out double outM32, out double outM33,
            out double outOffsetX, out double outOffsetY, out double outOffsetZ,
            out double outScale);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_moved(
            NativeShapeHandle NativeShapeHandle,
            NativeLocationHandle locationHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_gtransform(
            NativeShapeHandle shapeHandle,
            double m11, double m12, double m13, double offsetX,
            double m21, double m22, double m23, double offsetY,
            double m31, double m32, double m33, double offsetZ,
            double scaleX, double scaleY, double scaleZ,
            out NativeShapeHandle outHandle);

        #endregion

        #region CSG Solid Primitives

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_block(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double xLen, double yLen, double zLen,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_sphere(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_right_circular_cylinder(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius, double height,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_right_circular_cone(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius, double height,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_rectangular_pyramid(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double xLen, double yLen, double height,
            out NativeShapeHandle outHandle);

        #endregion

        #region Sweep Operations

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_extruded(
            NativeContextHandle ctx,
            NativeShapeHandle faceHandle,
            double dirX, double dirY, double dirZ,
            double depth,
            NativeLocationHandle locationHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_extruded_tapered(
            NativeContextHandle ctx,
            NativeShapeHandle startFaceHandle,
            NativeShapeHandle endFaceHandle,
            double dirX, double dirY, double dirZ,
            double depth,
            double precision,
            NativeLocationHandle locationHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_revolved(
            NativeContextHandle ctx,
            NativeShapeHandle faceHandle,
            double axisOriginX, double axisOriginY, double axisOriginZ,
            double axisDirX, double axisDirY, double axisDirZ,
            double angle,
            NativeLocationHandle locationHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_revolved_tapered(
            NativeContextHandle ctx,
            NativeShapeHandle faceHandle,
            NativeShapeHandle endFaceHandle,
            double axisOriginX, double axisOriginY, double axisOriginZ,
            double axisDirX, double axisDirY, double axisDirZ,
            double angle,
            double precision,
            NativeLocationHandle locationHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_solid_build_swept_disk(
            NativeContextHandle ctx,
            NativeShapeHandle directrixHandle,
            double radius,
            double innerRadius,
            out NativeShapeHandle outHandle);
